Refactored configurations for adapters

--- a/ui/src/app/connect/components/format-configuration/format-configuration.component.html
+++ b/ui/src/app/connect/components/format-configuration/format-configuration.component.html
@@ -18,11 +18,11 @@
 
     <div *ngIf="selectedFormat">
         <div *ngIf="selectedFormat.config.length > 0">
-            <sp-configuration-group
+            <sp-configuration-groupkl
                     [configurationGroup]="formatForm"
                     [adapterId]="adapterDescription.appId"
                     [configuration]="selectedFormat.config">
-            </sp-configuration-group>
+            </sp-configuration-groupkl>
         </div>
 
         <div *ngIf="selectedFormat.config.length === 0" class="sp-blue-border padding" style="padding: 15px;">
