--- a/ui/src/app/connect/components/generic-adapter-configuration/generic-adapter-configuration.component.html
+++ b/ui/src/app/connect/components/generic-adapter-configuration/generic-adapter-configuration.component.html
@@ -9,7 +9,7 @@
         <sp-configuration-group
                 [configurationGroup]="genericAdapterForm"
                 [adapterId]="adapterDescription.appId"
-                [configuration]="adapterDescription.protocolDescription.config">
+                [configuration]="protocolDescription.config">
         </sp-configuration-group>
 
     </div>
