Add header for schema editor

--- a/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
@@ -18,37 +18,19 @@
 
 <div fxLayout="row" fxLayoutAlign="center">
     <div fxFlex="0 1 80%">
+
         <div class="assemblyOptions sp-blue-bg">
-            <div fxLayout="row">
-                <div fxLayoutAlign="space-between center" class="add-schema" fxFlex="0 1 100%">
-                    <div>
-                        <button [disabled]="!isEditable" color="primary" mat-button (click)=addNestedProperty()>
-                            <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
-                        </button>
-                        <button [disabled]="!isEditable" color="primary" mat-button
-                            (click)="addStaticValueProperty()">
-                            <mat-icon matTooltip="Add a static value to event">add</mat-icon>
-                        </button>
-                        <button [disabled]="!isEditable" color="primary" mat-button
-                            (click)=addTimestampProperty()>
-                            <mat-icon matTooltip="Add timestamp to event schema">access_time</mat-icon>
-                        </button>
-                        <button color="primary" mat-button (click)=guessSchema()>
-                            <mat-icon matTooltip="Refresh Schema">refresh</mat-icon>
-                        </button>
-                        <button color="primary" mat-button (click)=togglePreview()>
-                            <mat-icon matTooltip="Show preview of schema">play_arrow</mat-icon>
-                        </button>
-                    </div>
-                    <div>
-                        <button style="padding-right:0" color="primary" mat-button [disabled]="countSelected == 0"
-                            (click)="removeSelectedProperties()">
-                            <mat-icon matTooltip="Remove selected Properties">delete</mat-icon>
-                        </button>
-                    </div>
-                </div>
-            </div>
+            <sp-schema-editor-header
+                    (addNestedPropertyEmitter)="addNestedProperty()"
+                    (addStaticValuePropertyEmitter)="addStaticValueProperty()"
+                    (addTimestampPropertyEmitter)="addTimestampProperty()"
+                    (guessSchemaEmitter)="guessSchema()"
+                    (togglePreviewEmitter)="togglePreview()"
+                    (removeSelectedPropertiesEmitter)="removeSelectedProperties()"
+                    [countSelected]="countSelected">
+            </sp-schema-editor-header>
         </div>
+
         <div class="sp-blue-border padding">
 
             <sp-loading-message *ngIf="isLoading"></sp-loading-message>
