--- a/ui/src/app/connect/components/start-adapter-configuration/start-adapter-configuration.component.html
+++ b/ui/src/app/connect/components/start-adapter-configuration/start-adapter-configuration.component.html
@@ -1,20 +1,21 @@
-<div [formGroup]="startAdapterFormGroup">
+<div [formGroup]="startAdapterForm">
     <ng-template matStepLabel>Start Adapter</ng-template>
     <div class="assemblyOptions sp-blue-bg">
         <h4>Adapter settings</h4>
     </div>
 
-    <div class="sp-blue-border padding">
+    <div class="sp-blue-border padding" style="padding: 15px; margin-bottom: 2%;">
         <div fxLayoutAlign="center" fxLayout="column" fxFlex="100">
             <mat-form-field>
-                <input matInput id="input-AdapterName" placeholder="Adapter Name"
-                       formControlName="startAdapterFormCtrl" [(ngModel)]="adapter.name">
+                <input matInput id="input-AdapterName"  [ngModelOptions]="{standalone: true}" placeholder="Adapter Name"
+                       [(ngModel)]="adapterDescription.name">
             </mat-form-field>
             <mat-form-field>
                 <input matInput id="input-AdapterDescription" [ngModelOptions]="{standalone: true}"
-                       placeholder="Adapter Description" [(ngModel)]="adapter.description">
+                       placeholder="Adapter Description" [(ngModel)]="adapterDescription.description">
             </mat-form-field>
 
+            <!-- Provide icon for adapter -->
             <!--                        <mat-form-field *ngIf="isEditable" style="width: 50%" (click)="fileInput.click();">-->
             <!--                            <input matInput placeholder="Icon" disabled (value)="fileName">-->
             <!--                            <input #fileInput type="file" style="display:none;"-->
@@ -26,20 +27,20 @@
             <!--                        </mat-form-field>-->
 
 
-            <mat-checkbox [disabled]="!isEditable" [(ngModel)]="removeDuplicates"
+            <mat-checkbox [(ngModel)]="removeDuplicates"
                           [ngModelOptions]="{standalone: true}">Remove Duplicates</mat-checkbox>
             <mat-form-field *ngIf="removeDuplicates">
-                <input [disabled]="!isEditable" matInput id="input-removeDuplicatesTime"
+                <input matInput id="input-removeDuplicatesTime"
                        [ngModelOptions]="{standalone: true}" placeholder="Remove Duplicates Time Window"
                        [(ngModel)]="removeDuplicatesTime">
             </mat-form-field>
 
-            <mat-checkbox [disabled]="!isEditable" [(ngModel)]="eventRateReduction"
+            <mat-checkbox [(ngModel)]="eventRateReduction"
                           [ngModelOptions]="{standalone: true}"
                           matTooltip="Send maximum one event in the specified time window">Reduce the event rate
             </mat-checkbox>
             <mat-form-field *ngIf="eventRateReduction">
-                <input [disabled]="!isEditable" type="number" matInput id="input-evenRateTime"
+                <input type="number" matInput id="input-evenRateTime"
                        [ngModelOptions]="{standalone: true}" [(ngModel)]="eventRateTime"
                        placeholder="Time Window (Milliseconds)" matTooltipPosition="above">
             </mat-form-field>
@@ -53,6 +54,7 @@
                 </mat-select>
             </mat-form-field>
 
+            <!-- Start pipeline template to store raw events in data lake -->
             <!--<mat-checkbox *ngIf="timestampPropertiesInSchema.length == 0"-->
             <!--[disabled]="timestampPropertiesInSchema.length == 0" [(ngModel)]="saveInDataLake"-->
             <!--[ngModelOptions]="{standalone: true}">Store in Datalake (Timestamp required)</mat-checkbox>-->
@@ -69,7 +71,7 @@
             <!--</mat-select>-->
             <!--</mat-form-field>-->
 
-            <mat-checkbox *ngIf="isSetAdapter" [(ngModel)]="adapter.stopPipeline"
+            <mat-checkbox *ngIf="isSetAdapter" [(ngModel)]="adapterDescription.stopPipeline"
                           [ngModelOptions]="{standalone: true}">Stop pipeline when replay is completed</mat-checkbox>
 
         </div>
@@ -77,13 +79,13 @@
 
     <div fxLayoutAlign="end">
         <button class="mat-basic" mat-raised-button (click)="removeSelection()">Cancel</button>
-        <button class="mat-basic stepper-button" mat-raised-button (click)="goBack(stepper)">Back</button>
-        <button [disabled]="startAdapterFormGroup.invalid || !isEditable" mat-raised-button
+        <button style="margin-left:10px;" class="mat-basic stepper-button" mat-raised-button (click)="goBack()">Back</button>
+        <button [disabled]="startAdapterSettingsFormValid" mat-raised-button
                 id="button-saveTemplate" color="primary" (click)="saveTemplate()" mat-button
                 style="margin-left:10px;">
             Save as Template
         </button>
-        <button [disabled]="startAdapterFormGroup.invalid" mat-raised-button id="button-startAdapter"
+        <button [disabled]="startAdapterSettingsFormValid" mat-raised-button id="button-startAdapter"
                 color="primary" (click)="startAdapter()" mat-button style="margin-left:10px;">
             Start Adapter
         </button>
