--- a/ui/src/app/connect/components/new-adapter/new-adapter.component.html
+++ b/ui/src/app/connect/components/new-adapter/new-adapter.component.html
@@ -47,8 +47,7 @@
             <ng-template matStepLabel>Settings</ng-template>
             <sp-specific-adapter-configuration
                     [adapterDescription]="adapter"
-                    [stepper]="stepper"
-                    (clickNextEmitter)="clickSpecificSettingsNextButton($event)"
+                    (clickNextEmitter)="clickSpecificSettingsNextButton()"
                     (removeSelectionEmitter)="removeSelection()">
             </sp-specific-adapter-configuration>
         </mat-step>
@@ -57,8 +56,7 @@
             <ng-template matStepLabel>Settings</ng-template>
             <sp-generic-adapter-configuration
                     [adapterDescription]="adapter"
-                    [stepper]="stepper"
-                    (clickNextEmitter)="clickProtocolSettingsNextButton($event)"
+                    (clickNextEmitter)="clickProtocolSettingsNextButton()"
                     (removeSelectionEmitter)="removeSelection()">
             </sp-generic-adapter-configuration>
         </mat-step>
@@ -67,9 +65,8 @@
             <ng-template matStepLabel>Select Format</ng-template>
             <sp-format-configuration
                     [adapterDescription]="adapter"
-                    [stepper]="stepper"
-                    (clickNextEmitter)="clickFormatSelectionNextButton($event)"
-                    (goBackEmitter)="goBack($event)"
+                    (clickNextEmitter)="clickFormatSelectionNextButton()"
+                    (goBackEmitter)="goBack()"
                     (removeSelectionEmitter)="removeSelection()">
             </sp-format-configuration>
         </mat-step>
@@ -81,8 +78,8 @@
                               [adapterDescription]="adapter"
                               [(eventSchema)]="eventSchema"
                               [(oldEventSchema)]="oldEventSchema"
-                             (clickNextEmitter)="clickEventSchemaNextButtonButton($event)"
-                             (goBackEmitter)="goBack($event)"
+                             (clickNextEmitter)="clickEventSchemaNextButtonButton()"
+                             (goBackEmitter)="goBack()"
                              (removeSelectionEmitter)="removeSelection()">
             </sp-event-schema>
         </mat-step>
@@ -91,9 +88,8 @@
             <ng-template matStepLabel>Start Adapter</ng-template>
             <sp-start-adapter-configuration
                     [adapterDescription]="adapter"
-                    [stepper]="stepper"
                     (removeSelectionEmitter)="removeSelection()"
-                    (goBackEmitter)="goBack($event)"
+                    (goBackEmitter)="goBack()"
                     (adapterStartedEmitter)="adapterWasStarted()">
             </sp-start-adapter-configuration>
         </mat-step>
