--- a/ui/src/app/connect/components/runtime-info/pipeline-element-runtime-info.component.html
+++ b/ui/src/app/connect/components/runtime-info/pipeline-element-runtime-info.component.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 </div>
-<div *ngIf="runtimeData">
+<div *ngIf="runtimeData" data-cy="sp-connect-adapter-live-preview">
     <p>Here is a preview of your data:</p>
     <table class="dataTable row-border hover">
         <thead>
