--- a/ui/src/app/connect/components/start-adapter-configuration/start-adapter-configuration.component.html
+++ b/ui/src/app/connect/components/start-adapter-configuration/start-adapter-configuration.component.html
@@ -7,7 +7,7 @@
         <div fxLayoutAlign="center" fxLayout="column" fxFlex="100">
             <mat-form-field>
                 <input matInput id="input-AdapterName"  [ngModelOptions]="{standalone: true}" placeholder="Adapter Name"
-                       [(ngModel)]="adapterDescription.name">
+                       [(ngModel)]="adapterDescription.name" data-cy="sp-adapter-name">
             </mat-form-field>
             <mat-form-field>
                 <input matInput id="input-AdapterDescription" [ngModelOptions]="{standalone: true}"
