--- a/ui/src/app/core/components/toolbar/toolbar.component.html
+++ b/ui/src/app/core/components/toolbar/toolbar.component.html
@@ -54,7 +54,8 @@
                             [ngClass]="accountMenuOpen.menuOpen ? 'sp-icon-button-no-hover' : 'sp-icon-button'" style="min-width:0px;"
                             [matMenuTriggerFor]="menu"
                             #accountMenuOpen="matMenuTrigger"
-                            matTooltip="User Preferences" matTooltipPosition="below">
+                            matTooltip="User Preferences" matTooltipPosition="below"
+                            data-cy="sp-user-preferences">
                         <i [ngStyle]="accountMenuOpen.menuOpen ? {'color': '#39b54a'} : {'color': 'white'}" class="material-icons">account_circle</i>
                     </button>
                 </div>
@@ -79,7 +80,8 @@
                 </button>
                 <mat-divider></mat-divider>
                 <button mat-menu-item id="sp_logout" (click)="logout()"
-                           style="min-width:0px;">
+                           style="min-width:0px;"
+                        data-cy="sp-logout">
                     <mat-icon aria-label="Logout">exit_to_app</mat-icon>
                     Logout
                 </button>
