--- a/ui/src/app/connect/components/format-item/format-item.component.html
+++ b/ui/src/app/connect/components/format-item/format-item.component.html
@@ -16,6 +16,6 @@
   ~
   -->
 
-<div id="{{format.name.split(' ').join('_').toLowerCase()}}" *ngIf="!$any(format).edit || !hasConfig" class="format-box" (click)="formatEditable()" [ngClass]="{selectedItem: isSelected()}" fxFlex="100" fxLayout="column">
+<div [attr.data-cy]="format.name.split(' ').join('_').toLowerCase()" *ngIf="!$any(format).edit || !hasConfig" class="format-box" (click)="formatEditable()" [ngClass]="{selectedItem: isSelected()}" fxFlex="100" fxLayout="column">
     <div class="format-label"> {{format.name}} </div>
 </div>
