--- a/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
+++ b/ui/src/app/connect/components/schema-editor/event-schema/event-schema.component.html
@@ -65,6 +65,6 @@
     <button class="mat-basic" mat-raised-button (click)="removeSelection()">Cancel</button>
     <button class="mat-basic stepper-button" mat-raised-button (click)="goBack()">Back</button>
     <button class="stepper-button" id="event-schema-next-button"
-            (click)="clickNext()" color="primary" mat-raised-button>Next
+            (click)="clickNext()" data-cy="sp-event-schema-next-button" color="primary" mat-raised-button>Next
     </button>
 </div>
