--- a/ui/src/app/core-ui/static-properties/static-any-input/static-any-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-any-input/static-any-input.component.html
@@ -18,18 +18,17 @@
 
 <div id="formWrapper" fxFlex="100" fxLayout="column">
     <div *ngIf="!staticProperty.horizontalRendering" fxLayout="column">
-        <mat-checkbox *ngFor="let option of staticProperty.options" [(ngModel)]="option.selected" style="margin-left: 10px;">
+        <mat-checkbox *ngFor="let option of staticProperty.options" [(ngModel)]="option.selected" style="margin-left: 10px;" [attr.data-cy]="fieldName">
             {{option.name}}
         </mat-checkbox>
 
     </div>
-
     <div *ngIf="staticProperty.horizontalRendering">
         <mat-form-field style="width: 100%">
             <mat-select multiple>
                 <mat-option *ngFor="let option of staticProperty.options" [value]="option.elementId"
                             (click)="select(option.elementId)">
-                    <label style="font-weight: normal">
+                    <label style="font-weight: normal" >
                         {{option.name}}
                     </label>
                 </mat-option>
