--- a/ui/src/app/core-ui/static-properties/static-property.component.html
+++ b/ui/src/app/core-ui/static-properties/static-property.component.html
@@ -81,7 +81,10 @@
             <app-static-any-input
                     *ngIf="isAnyStaticProperty(staticProperty) && !isRuntimeResolvableAnyStaticProperty(staticProperty)"
                     (inputEmitter)="valueChange($event)"
-                    [staticProperty]="staticProperty"></app-static-any-input>
+                    [fieldName]="fieldName"
+                    [staticProperty]="staticProperty">
+
+            </app-static-any-input>
 
             <app-static-one-of-input
                     *ngIf="isOneOfStaticProperty(staticProperty) && !isRuntimeResolvableOneOfStaticProperty(staticProperty)"
